calcular o somar e função chamando função

--- a/Index.html
+++ b/Index.html
@@ -23,13 +23,17 @@
         <h2>Calculando 2 números</h2>
 
         <form action="">
-            <label for="n1" class="form-label">N1</label>
-            <input type="text" class="form-control" id="n1" required>
+            <label for="n1" class="form-label">Número 1</label>
+            <input type="number" class="form-control" id="n1" required>
 
-            <label for="n2" class="form-label">N2</label>
-            <input type="text" class="form-control" id="n2" required>
+            <label for="n2" class="form-label">Número 2</label>
+            <input type="number" class="form-control" id="n2" required>
 
-            <button class="btn btn-primary" type="submit">Somar</button>
+            <button 
+                class="btn btn-primary" 
+                type="button" 
+                onclick="soma()">Somar
+            </button>
             <button class="btn btn-primary" type="reset">Limpar</button>
 
             <div class="resultado"></div>
