--- a/Index.html
+++ b/Index.html
@@ -29,17 +29,35 @@
             <label for="n2" class="form-label">Número 2</label>
             <input type="number" class="form-control" id="n2" required>
 
-            <button 
+            <div>
+                <button 
                 class="btn btn-primary" 
                 type="button" 
-                onclick="soma()">Somar
-            </button>
+                onclick="soma()">+
+                </button>
+                <button 
+                class="btn btn-primary" 
+                type="button" 
+                onclick="subtrair()">-
+                </button>
+                <button 
+                class="btn btn-primary" 
+                type="button" 
+                onclick="Multiplicação()">*
+                </button>
+                <button 
+                class="btn btn-primary" 
+                type="button" 
+                onclick="Divisão()">/
+                </button>
             <button class="btn btn-primary" type="reset">Limpar</button>
+            </div>
 
             <div class="resultado"></div>
         </form>
 
-    </div>
+    
+
     <!-- 1: Usando a tag script -->
     <script>
         // console.log('Testando a tag script!')
