adicionando a função none

--- a/Index.html
+++ b/Index.html
@@ -50,13 +50,11 @@
                 type="button" 
                 onclick="Divisão()">/
                 </button>
-            <button class="btn btn-primary" type="reset">Limpar</button>
+            <button class="btn btn-primary" type="reset" onclick="Limpar()">Limpar</button>
             </div>
 
             <div class="resultado"></div>
         </form>
-
-    
 
     <!-- 1: Usando a tag script -->
     <script>
